--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -41,6 +41,16 @@ body {
   overflow: hidden;
 }
 
+.container2 {
+  display: flex;
+  flex-direction: column;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 1rem 2rem;
+  justify-content: center;
+  overflow: hidden;
+}
+
 /* HEADER */
 
 header {
