--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -31,6 +31,10 @@ body {
   font-family: var(--font-primary);
 }
 
+.section-background {
+  background-color: #edfdfa;
+}
+
 .container {
   display: flex;
   flex-direction: column;
