--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -33,6 +33,11 @@ body {
 
 .section-background {
   background-color: #edfdfa;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 .container {
