--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -1,6 +1,3 @@
-@import url(fontawesome-all.min.css);
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Raleway:400,800,900");
-
 /*
 	Future Imperfect by HTML5 UP
 	html5up.net | @ajlkn
@@ -271,6 +268,73 @@ input, select, textarea {
   .fa-twitter {
 	background: transparent;
 	color: black;
+  }
+
+  .btn {
+	display: inline-block;
+	font-style: italic;
+	font-weight: bold;
+	font-size: 1rem;
+	text-align: center;
+	text-transform: capitalize;
+	transition: all 0.3s ease;
+	box-shadow: var(--header-shadow);
+	cursor: pointer;
+	text-decoration: none;
+	outline: none;
+	width: 11em;
+	height: 3em;
+	float: right;
+	font-family: "Concert One", Helvetica, sans-serif;
+	margin: 1em;
+  }
+  .btn:hover {
+	box-shadow: none;
+  }
+  .btn:disabled {
+	cursor: default;
+  }
+  
+  .wallet-btn {
+	border-radius: 5rem;
+	border: black 2px solid;
+	border-color: black;
+  }
+
+  /* NOT CONNECTED */
+.not-connected {
+	align-items: center;
+	height: 100%;
+	text-align: center;
+	margin: 0 auto 0 35vw;
+	opacity: 0;
+	transform: translateY(10vh);
+	transition: all 0.5s ease-in-out;
+  }
+  
+  .show-not-connected {
+	opacity: 1;
+	transform: translateY(0);
+  }
+  
+  .not-connected h1 {
+	text-shadow: 2px 2px 0 var(--accent-color);
+	font-style: italic;
+	margin: 2rem 0;
+	font-size: 3.5rem;
+  }
+  
+  .not-connected p {
+	font-size: 1.1rem;
+	font-family: var(--font-secondary);
+	line-height: 1.8;
+  }
+  
+  .not-connected a {
+	text-decoration: none;
+	color: var(--accent-color);
+	font-size: 1.5rem;
+	font-weight: bold;
   }
 
 /* Basic */
