--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -2443,6 +2443,12 @@ input, select, textarea {
 	margin: 1rem 0;
   }
 
+  /* UTILITIES */
+
+.hidden {
+	display: none;
+  }
+
 /* Icon */
 
 	.icon {
