--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -2282,6 +2282,26 @@ input, select, textarea {
 				color: rgba(160, 160, 160, 0.3) !important;
 			}
 
+/* CARD */
+
+.card {
+	position: relative;
+	background-color: var(--bg-color);
+	border-radius: 5px;
+	border: 3px solid var(--accent-color);
+	box-shadow: var(--card-shadow);
+	padding: 5rem;
+	margin-bottom: 2rem;
+	opacity: 0;
+	transform: translateX(100vw);
+	transition: all 0.5s ease-in-out;
+  }
+  
+  .show-card {
+	opacity: 1;
+	transform: translateX(0);
+  }
+
 /* COUNTDOWN SECTION */
   
   #countdown {
