--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -2321,7 +2321,7 @@ input, select, textarea {
   }
   
   .countdown ul {
-	display: flex;
+	display: -webkit-inline-box;
 	gap: 2rem;
 	padding-left: 0em !important;
   }
